@@ -55,7 +55,7 @@ public class GroupService {
                 }
 
                 if (groupDTO.getMembers() != null && !groupDTO.getMembers().isEmpty()) {
-                        List<Integer> memberIds = groupDTO.getMembers().stream().map(GroupUserDTO::getUserId).collect(Collectors.toList());
+                        List<Integer> memberIds = groupDTO.getMembers().stream().map(GroupUserDTO::getUserId).toList();
                         List<User> foundUsers = userRepository.findAllById(memberIds);
                         for (User user : foundUsers) {
                                 group.getMembers().add(GroupMember.builder()
@@ -97,7 +97,7 @@ public class GroupService {
                                                 .build())
                                 .collect(Collectors.toList());
 
-                List<com.soccialy.backend.entity.Event> allEvents = eventRepository.findByGroupId(groupId);
+                List<com.soccialy.backend.entity.Event> allEvents = eventRepository.findByGroupId(groupId); //linia asta nu ar puta fi doar "List<EventDTO> allEvents;" ?
                 if (query != null && !query.trim().isEmpty()) {
                         String lowerQuery = query.toLowerCase();
                         allEvents = allEvents.stream()
@@ -162,7 +162,7 @@ public class GroupService {
                                         // Priority 3: Most 'MAYBE' votes
                                         return Integer.compare(b.getVotes().getPoate(), a.getVotes().getPoate());
                                 })
-                                .collect(Collectors.toList());
+                                .toList();
 
                 // Set isWinning for the first event if it has votes
                 if (!events.isEmpty()) {
@@ -172,12 +172,20 @@ public class GroupService {
                         }
                 }
 
+                        /* 
+                        boolean isGuestMember = false;
+                        if( userId != null ) { 
+                                isMember = group.getMembers().stream().anyMatch( m -> m.getUser().getId.equals(userid));
+                        }*/
+
                 return GroupDetailDTO.builder()
                                 .id(group.getId())
                                 .name(group.getName())
                                 .imgLink(group.getImgLink())
                                 .members(memberDTOs)
                                 .events(events)
+                                .isCurrentUserMember(group.hasMember(userId)) // nou
+
                                 .build();
         }
 
